# real-time-cop-jointangle-emg-system

./: .gitignore  CITATION.cff  EMG.py  FP.py  Figures.py  HARDWARE.md  LICENSE  Layout.py  Layout2.py  Layout3.py  Mediapipe_Prueba.py  README.md  config.yaml  install_optimization.sh  pyproject.toml  quick-start.sh  requirements-emg.txt  requirements-hardware.txt  requirements-pip-only.txt  requirements-unified.txt  requirements.txt  setup.cfg  setup.ps1  setup.sh  tests.txt
acquisition_systems/: app_gui.py  app_gui_optimized.py  recorder.py
acquisition_systems/common/: config.py  dsp.py  runtime.py  types.py  utils.py
acquisition_systems/workers/: cop.py  emg.py  pose.py
acquisition_systems/workers_mp/: __init__.py  base.py  cop_optimized.py  emg_optimized.py  pose_optimized.py  runtime_optimized.py
code-not-used/: BTracking.py  PostureAPP.py  ThreadMain.py
esp32_firmware/: README.md  esp32_firmware.ino
esp32_firmware/emg_simulator/: emg_simulator.ino
esp32_firmware/esp32_firmware_simulator/: esp32_firmware_simulator.ino
examples/: demo_simulated.py  headless_record.py
gui/: app.py
models/: movenet_lightning.tflite
real-time-cop-jointangle-emg-system/: config.yaml  pyproject.toml  requirements.txt  setup.cfg
real-time-cop-jointangle-emg-system/acquisition_systems/: app_gui.py  recorder.py
real-time-cop-jointangle-emg-system/examples/: demo_simulated.py
scripts/: post_process_emg.py
single-data-acquisition/: abdominal-emg.py  abdominal_emg.py  app.py  body-tracking.py  body_tracking.py  center-of-pressure.py  center_of_pressure.py  test1.csv
(+9 files in other folders)
