[metadata]
name = acquisition-systems
version = 0.1.0
description = Real-time CoP, joint angle (MediaPipe), and abdominal EMG acquisition with GUI and headless modes.
author = Your Name
license = MIT
license_files = LICENSE
url = https://github.com/your/repo
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy
    matplotlib
    pandas
    pybluez
    opencv-python
    mediapipe
    pyyaml

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    as-gui = acquisition_systems.app_gui:main
    as-headless = examples.headless_record:main
    as-demo-sim = examples.demo_simulated:main
